Added audit logs feature
